# learn-dev-tauri

./: .gitignore  README.md
level-00-前置学习/: CAPABILITIES_CHEATSHEET.md  LEARN_GUIDE.md  README.md  package.json
level-00-前置学习/src/: App.vue
level-00-前置学习/src-tauri/: Cargo.toml  tauri.conf.json
level-00-前置学习/src-tauri/src/: lib.rs
level-00-前置学习/src-tauri/src/learn/: _01_rust_commands.rs  _02_rust_state_management.rs  _03_rust_events_and_channels.rs  _04_rust_filesystem.rs  _05_rust_window_control.rs  _06_rust_security.rs  _07_rust_plugins.rs  _08_rust_integrated_example.rs  mod.rs
level-00-前置学习/src/learn/: 01_project_structure.ts  02_frontend_backend_communication.ts  03_commands_and_payloads.ts  04_capabilities_and_permissions.ts  05_window_management.ts  06_menu_and_tray.ts  07_filesystem_operations.ts  08_dialogs_and_notifications.ts  09_clipboard_and_http.ts  10_shell_and_process.ts  11_state_and_events.ts  12_build_and_release.ts
level-01-TauriV2架构与权限模型/: README.md  package.json
level-01-TauriV2架构与权限模型/bugs/: bug_01_capabilities未声明导致IPC调用被拒绝.json  bug_02_tauri.conf.json中identifier格式错误.json  bug_03_CSP阻止内联脚本导致前端白屏.conf
level-01-TauriV2架构与权限模型/src/: App.vue  playground.vue
level-01-TauriV2架构与权限模型/src-tauri/: Cargo.toml  tauri.conf.json
level-01-TauriV2架构与权限模型/src-tauri/src/: lib.rs
level-02-IPC通信Command与State/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
level-02-IPC通信Command与State/bugs/: bug_01_state非Send导致编译失败.rs  bug_02_command返回非序列化类型导致前端解析错误.rs  bug_03_前端invoke参数名不匹配导致默认值.ts
level-02-IPC通信Command与State/src/: App.vue  main.ts
level-02-IPC通信Command与State/src-tauri/: Cargo.toml  tauri.conf.json
level-02-IPC通信Command与State/src-tauri/capabilities/: default.json
level-02-IPC通信Command与State/src-tauri/src/: lib.rs  main.rs  state.rs
level-03-EventChannel异步流/: README.md  package.json
level-03-EventChannel异步流/bugs/: bug_01_事件监听未清理导致内存泄漏.vue  bug_02_Channel未正确关闭导致Rust端阻塞.rs  bug_03_asyncCommand中Mutex阻塞导致前端超时.rs
level-03-EventChannel异步流/src/: App.vue
level-03-EventChannel异步流/src-tauri/: Cargo.toml  tauri.conf.json
level-03-EventChannel异步流/src-tauri/capabilities/: default.json
level-03-EventChannel异步流/src-tauri/src/: lib.rs  main.rs
level-04-文件系统与原生对话框/: README.md  package.json
level-04-文件系统与原生对话框/bugs/: bug_01_scope路径越界导致文件访问被拒绝.json
level-04-文件系统与原生对话框/src/: App.vue
level-04-文件系统与原生对话框/src-tauri/: Cargo.toml  tauri.conf.json
level-04-文件系统与原生对话框/src-tauri/capabilities/: default.json
level-04-文件系统与原生对话框/src-tauri/src/: lib.rs
level-05-窗口管理与多WebView/: README.md  package.json
level-05-窗口管理与多WebView/src/: App.vue
level-05-窗口管理与多WebView/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
level-05-窗口管理与多WebView/src-tauri/src/: lib.rs
level-06-菜单托盘与系统集成/: README.md  package.json  vite.config.ts
level-06-菜单托盘与系统集成/src/: App.vue
level-06-菜单托盘与系统集成/src-tauri/: Cargo.toml  tauri.conf.json
level-06-菜单托盘与系统集成/src-tauri/capabilities/: default.json
level-06-菜单托盘与系统集成/src-tauri/src/: lib.rs  main.rs
level-07-安全加固与CSP/: README.md  package.json
level-07-安全加固与CSP/src/: App.vue  main.ts
level-07-安全加固与CSP/src-tauri/: Cargo.toml  tauri.conf.json
level-07-安全加固与CSP/src-tauri/src/: lib.rs
level-08-插件系统与Sidecar/: README.md  package.json
level-08-插件系统与Sidecar/src/: App.vue
level-08-插件系统与Sidecar/src-tauri/: Cargo.toml  tauri.conf.json
level-08-插件系统与Sidecar/src-tauri/capabilities/: default.json
level-08-插件系统与Sidecar/src-tauri/src/: lib.rs
level-09-打包签名与自动更新/: README.md  index.html  package.json
level-09-打包签名与自动更新/src/: App.vue
level-09-打包签名与自动更新/src-tauri/: Cargo.toml  tauri.conf.json
level-09-打包签名与自动更新/src-tauri/src/: lib.rs
level-10-毕业设计-企业数据汇总办公桌面端/: Makefile  README.md  index.html  package.json  vite.config.ts
level-10-毕业设计-企业数据汇总办公桌面端/scripts/: build-macos.sh
level-10-毕业设计-企业数据汇总办公桌面端/src/: App.vue  main.ts
level-10-毕业设计-企业数据汇总办公桌面端/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
level-10-毕业设计-企业数据汇总办公桌面端/src-tauri/capabilities/: default.json  file-system.json  notification.json  window.json
level-10-毕业设计-企业数据汇总办公桌面端/src-tauri/src/: lib.rs  main.rs  state.rs
level-10-毕业设计-企业数据汇总办公桌面端/src-tauri/src/commands/: auth.rs  file.rs  mod.rs  report.rs  system.rs
level-10-毕业设计-企业数据汇总办公桌面端/src-tauri/src/plugins/: custom.rs  mod.rs
level-10-毕业设计-企业数据汇总办公桌面端/src/components/: Sidebar.vue
level-10-毕业设计-企业数据汇总办公桌面端/src/router/: index.ts
level-10-毕业设计-企业数据汇总办公桌面端/src/stores/: app.ts  auth.ts
level-10-毕业设计-企业数据汇总办公桌面端/src/views/: Dashboard.vue  FileManager.vue  Login.vue  Reports.vue  Settings.vue
