[package]
name = "level-01-tauri-arch"
version = "0.1.0"
description = "Level 01: Tauri v2 架构与权限模型"
authors = ["learner"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "level_01_tauri_arch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 核心 —— 【对比 Electron】Electron 把 Chromium+Node 绑在一起，Tauri 只绑定系统 WebView
tauri = { version = "2", features = [] }

# 序列化 —— 【对比 Electron】Electron 通过 structured clone 传递对象（隐式序列化），
#            Tauri v2 通过 serde 显式序列化（编译期检查类型安全性）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
