[package]
name = "level-02-ipc-command-state"
version = "0.1.0"
description = "Level 02: IPC Command 与 State 深度实践"
authors = ["learner"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "level_02_ipc_command_state_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
