[package]
name = "level-03-event-channel"
version = "0.1.0"
description = "Level 03: Event, Channel 与异步流"
authors = ["learner"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "level_03_event_channel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
