[package]
name = "level-04-file-system"
version = "0.1.0"
description = "Level 04: 文件系统与原生对话框"
authors = ["learner"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "level_04_file_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
