[package]
name = "level-07-security"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "level_07_security_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
