[package]
name = "level-09-packaging"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "level_09_packaging_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
